platform/services/tinai-mail/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinai-mail
  namespace: core
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
spec:
  ingressClassName: traefik
  rules:
    - host: mail.tinai.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinai-mail
                port:
                  number: 3000
